--- a/Entrega IV/08.Filosofia.tex
+++ b/Entrega IV/08.Filosofia.tex
@@ -1,4 +1,4 @@
-\section{El serialismo en la filosofía del arte}\label{ch:filosofia}
+%\section{El serialismo en la filosofía del arte}\label{ch:filosofia}
 	 % TODO
         % 08.Recorrido filosófico histórico, filosofía del arte (quotes), motivos míos (filosofía actual)
 %    \subsection{Recorrido filosófico del serialismo}
@@ -22,7 +22,7 @@
 %    
 %    In any case, Schoenberg's 12-tone technique was not the "natural" continuation of tonality, it was just one alternative. What makes Scriabin's or Stravinski's methods less valid? However, Schoenberg, unlike the others, wrote many many books ('selling' his ideas) that became the official textbooks of many American universities (see http://www.nytimes.com/2000/07/23/arts/l-serialist-history-textbook-dogma-297585.html)... And for a time, contradicting him became a sin (e.g. %http://www.nytimes.com/2000/07/09/arts/music-midcentury-serialists-the-bullies-or-the-besieged.html?pagewanted=all&src=pm).
     
-    \subsection{La visión artística de Schoenberg}
+    \section{La visión artística de Schoenberg}
     En julio de 1921, tras haber ideado los fundamentos del dodecafonismo, Schoenberg anunció a su discípulo Josef Rufer \cite{quote1}:
     \begin{quote}
     	\textit{He realizado un descubrimiento que asegurará la supremacía de la música alemana durante los próximos cien años.}
@@ -37,7 +37,7 @@
     }
     \end{quote}
 
-	Tras la muerte de Schoenberg en 1951, y durante algunas décadas más, su sistema compositivo fue venerado por los compositores jóvenes más brillantes, pero pronto se desvaneció de las salas de conciertos. El serialismo siempre se consideró una música académica, difícil de entender, apenas musical sino teórica. La complejidad de percibir esta música meramente por su estructura formal impidió, y todavía impide, que se disfrutara más allá de su estudio. Schoenberg intentó eximirse culpando al oyente, al que no creyó suficientemente preparado \cite{scho}:
+	Tras la muerte de Schoenberg en 1951, y durante algunas décadas más, su sistema compositivo fue venerado por los compositores jóvenes más brillantes (ver \cite{celia2}), pero pronto se desvaneció de las salas de conciertos. El serialismo siempre se consideró una música académica, difícil de entender, apenas musical sino teórica. La complejidad de percibir esta música meramente por su estructura formal impidió, y todavía impide, que se disfrutara más allá de su estudio. Schoenberg intentó eximirse culpando al oyente, quien él creyó que no se esforzaba lo suficiente \cite{scho}:
 	
 	\begin{quote}
 		\textit{La composición con doce sonidos no tiene otra finalidad que la comprensión.
@@ -46,7 +46,7 @@
 			[...] Solo el compositor perfectamente preparado será quien componga para el oyente musical igualmente bien dispuesto.}
 	\end{quote}
 	
-	Al contrario de lo que Schoenberg creía, incluso el \textit{oyente experto}, el que describe T. W. Adorno en su ``Introducción a la sociología de la música'', tiene grandes dificultades para distinguir auditivamente todos los elementos que caracterizan el serialismo. Somos capaces de retener, a lo sumo, motivos de seis o siete notas, pero no de doce \cite{sevenpm2}; mucho menos de reconocer si una serie es transformación de otra. ¿En qué medida afectan las reglas dodecafónicas al discurso sonoro de una pieza?
+	Al contrario de lo que Schoenberg creía, incluso el \textit{oyente experto}, el que describe T. W. Adorno en su ``Introducción a la sociología de la música'' \cite{adorno}, tiene grandes dificultades para distinguir auditivamente todos los elementos que caracterizan el serialismo. Somos capaces de retener, a lo sumo, motivos de seis o siete notas, pero no de doce \cite{sevenpm2}; mucho menos de reconocer si una serie es transformación de otra. ¿En qué medida afectan las reglas dodecafónicas al discurso sonoro de una pieza?
 	
 	El dodecafonismo puede atribuirse el haber prescindido de algunas de las preconcepciones musicales más arraigadas, como la melodía, la consonancia o la tonalidad. Pero precisamente por eso es impopular, porque toma la disonancia y la pone al frente de toda la composición. Para Schoenberg, la aprobación del público no era el objetivo de su arte, y, de hecho, el desagrado colectivo era un signo del alto nivel artístico y espiritual al que se encontraba \cite{scho}:
 	
@@ -54,7 +54,7 @@
 %		\emph{La belleza es una necesidad de los mediocres.}%\footnote{A. Schoenberg, \emph{Harmonielehre}, 1922.}
 %	\end{quote}
 	\begin{quote}
-		\emph{El valor de mercado es irrelevante para el valor intrínseco. Un juicio no cualificado puede como máximo decidir el valor de mercado - un valor que puede ser inversamente proporcional al valor intrínseco.}%\footnote{A. Schoenberg, \emph{An Artistic Impression} (1909) en \emph{Style and Idea}, 1985.}
+		\emph{El valor de mercado es irrelevante para el valor intrínseco. Un juicio no cualificado puede como máximo decidir el valor de mercado \textemdash un valor que puede ser inversamente proporcional al valor intrínseco.}%\footnote{A. Schoenberg, \emph{An Artistic Impression} (1909) en \emph{Style and Idea}, 1985.}
 	\end{quote}
 	\begin{quote}
 		\emph{Ningún artista, ningún poeta, ningún filósofo y ningún músico, cuyo pensamiento se desenvuelve en la más alta esfera, habrá de descender a la vulgaridad para mostrarse complacientes con un eslogan tal como ``Arte para todos''. Porque si es arte no será para todos, y si es para todos no será arte.}%\footnote{A. Schoenberg, \emph{New Music, Outmoded Music, Style and Idea}, 1946.}
@@ -65,8 +65,8 @@
 	
 	Sin embargo, el rechazo a no ser rechazado ha dejado de tener cabida en nuestro contexto artístico. El academicismo ya no es excluyente a la divulgación o a la búsqueda de belleza sensorial. De las técnicas serialistas se puede tomar aquello que es interesante intelectualmente e incorporarlo a otras técnicas que son interesantes estéticamente.
 	
-	Este es el experimento que he querido proponer: despojar al serialismo de lo que, en mi opinión, provoca el rechazo general: la disonancia. Ya que esta proviene del cromatismo, el propósito del experimento es utilizar escalas que no tengan intervalos de semitono para crear con ellas un serialismo de menos notas. 
+	Este es el experimento que he querido proponer: despojar al serialismo de lo que, en mi opinión, provoca el rechazo general: la disonancia extrema. Ya que esta proviene del cromatismo, el propósito del experimento es utilizar escalas que tengan menos intervalos de semitono para crear con ellas un pseudo-serialismo de menos notas. 
 	
-	Se modificarán las notas de una obra dodecafónica ya existente para que se adapte a la nueva escala utilizada, mientras que el ritmo, la duración, el timbre y las dinámicas, que siguen siendo producto del compositor original, se dejan intactas. El propósito final es intentar conservar la estructura matemática renovando, en cambio, la percepción colectiva de estas músicas.
+	Se han modificado las notas de varias obras dodecafónicas ya existentes, mientras que el ritmo, la duración, el timbre y las dinámicas, que siguen siendo producto de los compositores originales, se han dejado intactas. El propósito final es intentar conservar la estructura matemática subyacente renovando, en cambio, la percepción colectiva de estas músicas.
 	
-	Para describir el proceso de modificación de las obras debemos definir lo que entendemos por escala y cuáles son las funciones óptimas entre escalas.
+	Para describir el proceso de modificación de las obras debemos definir lo que se entiende por escala y cuáles son las funciones óptimas entre escalas.
