--- a/Entrega IV/09.Escalas.tex
+++ b/Entrega IV/09.Escalas.tex
@@ -4,13 +4,13 @@
 		Una \textbf{escala interválica} es una secuencia ordenada de números naturales -- una secuencia de intervalos entre notas -- tales que la suma de todos ellos da 12. Así solo consideramos válidas las escalas equivalentes octava a octava%: todos los intervalos de la escala deben sumar el número de semitonos de una octava
 		. Esto debe ocurrir para poder considerar transformaciones de la escala cromática en escalas menores, aunque es generalizable a cualquier longitud. Diremos entonces que la escala cromática es la \textbf{súper-escala} de las \textbf{sub-escalas} con las que trabajaremos. Por ejemplo, la escala diatónica jónica (o escala mayor) tiene como secuencia (2, 2, 1, 2, 2, 2, 1).
 		
-		Dada una escala interválica de longitud L y una nota fija inicial, la secuencia de intervalos se convierte en una secuencia de notas de longitud L+1. Se construye comenzando por la nota inicial y sumando cada intervalo para conseguir la nota siguiente.
+		Dada una escala interválica de longitud $\ell$ y una nota fija inicial, la secuencia de intervalos se convierte en una secuencia de notas de longitud $\ell$+1. Se construye comenzando por la nota inicial y sumando cada intervalo para conseguir la nota siguiente.
 		
 		Con la escala mayor y la nota Re se consigue (Re, Mi, Fa$\#$, Sol, La, Si, Do$\#$, Re), ya que es equivalente a (2, 2+\textbf{2}=4, 4+\textbf{2}=6, 6+\textbf{1}=7, 7+\textbf{2}=9, 9+\textbf{2}=11, 11+\textbf{2}=13, 13+\textbf{1}=14). Por construcción, la última nota debe ser equivalente a la primera, ya que en el último paso habremos sumado a la nota inicial todos los términos de la secuencia interválica, y por definición suman 12.
 		
-		De esta forma, se puede definir una \textbf{escala-\textit{k}} como el conjunto de notas generadas por una escala interválica desde la nota $k$. Por ejemplo, el conjunto anterior sería la escala-2 mayor; es decir, la escala de Re mayor. Una escala generada por una secuencia de intervalos con longitud L tiene L notas, ya que como la última es repetida no hay por qué considerarla. Su longitud $\text{L}\leq 12$, ya que una escala-\textit{k} definida de esta forma siempre es un subconjunto de la escala cromática: $E_k\subseteq\mathbb{Z}/(12)$. Al generalizarlo a cualquier súper-escala, habría que considerar las notas distintas según su escala o formular otras definiciones más adecuadas.
+		De esta forma, se puede definir una \textbf{escala-\textit{k}} como el conjunto de notas generadas por una escala interválica desde la nota $k$. Por ejemplo, el conjunto anterior sería la escala-2 mayor; es decir, la escala de Re mayor. Una escala generada por una secuencia de intervalos con longitud $\ell$ tiene $\ell$ notas, ya que como la última es repetida no hay por qué considerarla. Su longitud $\ell\leq 12$, ya que una escala-\textit{k} definida de esta forma siempre es un subconjunto de la escala cromática: $E_k\subseteq\mathbb{Z}/(12)$. Al generalizarlo a cualquier súper-escala, habría que considerar las notas distintas según su escala o formular otras definiciones más adecuadas.
 		
-		Una \textbf{función a una escala-\textit{k}} es una función $f$ que transforma cada nota de la escala cromática a un valor de la escala $E_k$. Entonces $f : \mathbb{Z}/(12) \rightarrow E_k^*$ reduce las notas de una melodía a solamente la escala escogida, donde $E_k^*$ está formado por las notas de $E_k$ pero quizás en octavas distintas. Las funciones a escalas se representan de la siguiente manera, con la primera fila representando el dominio de $f$ (la escala cromática), la segunda su imagen (la escala $E_k^*$), y la tercera su secuencia interválica:
+		Una \textbf{función a una escala-\textit{k}} es una función $f$ que transforma cada nota de la escala cromática a un valor de la escala $E_k$. Entonces $f : \mathbb{Z}/(12) \rightarrow E_k^*$ reduce las notas de una melodía a solamente la escala escogida, donde $E_k^*$ está formado por las notas de $E_k$ pero quizás en octavas distintas. Las funciones a escalas se representan de la siguiente manera, con la primera fila representando el dominio de $f$ (la escala cromática); la segunda su imagen (la escala con repeticiones y en distintas octavas, $E_k^*$); y la tercera su secuencia interválica, que es de interés, ya que coincide con la escala interválica de partida salvo en los valores nulos.
 		
 		\[\left.\begin{matrix}
 		0&1&2&\ldots&10&11\\
@@ -32,7 +32,7 @@
 				
 		\[\left.\begin{array}{*{13}c}
 		\text{Cromática}&0&1&2&3&4&5&6&7&8&9&10&11\\
-		\text{Escala E}&a_1&a_1&a_2&a_2&a_3&a_3&a_4&a_4&a_5&a_5&a_6&a_6\\
+		\text{Escala }E&a_1&a_1&a_2&a_2&a_3&a_3&a_4&a_4&a_5&a_5&a_6&a_6\\
 		\text{Intervalos}&&&&&&\ldots\\
 		\end{array}\right.\]
 		
@@ -45,74 +45,47 @@
 		c(q+r) + r =
 		c|E| + r = 12$, lo cual se cumple por el algoritmo de la división, que asegura que al dividir 12 entre $|E|$ existen su cociente $c$ y su resto $r\geq0$. $\square$
 		
+		La siguiente tabla describe, para cada posible $|E|$ en cada fila, la frecuencia óptima de sus elementos. Las columnas representan las frecuencias de los elementos, y los números de dentro son cada $q$ y $r$ (cuando es 0 no se escribe: no hay notas con esa frecuencia).
+	
+		\[\begin{array}{l|rrrrrrrrrrrr}
+		&1&2&3&4&5&6&7&8&9&10&11&12\\\hline
+		1&&&&&&&&&&&&1\\\hline
+		2&&&&&&2\\\hline
+		3&&&&3\\\hline
+		4&&&4\\\hline
+		5&&3&2\\\hline
+		6&&6\\\hline
+		7&2&5\\\hline
+		8&4&4\\\hline
+		9&6&3\\\hline
+		10&8&2\\\hline
+		11&10&1\\\hline
+		12&12&\\
+		\end{array}\]
+		
 		Estas funciones forman parte del numeroso conjunto de elementos musicales de \textbf{máxima regularidad}. Un ejemplo importante de ellos son los ritmos euclídeos \textemdash para más información ver \cite{euclides}.
 		
-%		El siguiente gráfico describe, para cada posible $|E|$ en cada fila, la frecuencia óptima de sus elementos. Las columnas representan las frecuencias de los elementos, y los números de dentro son cada $q$ y $r$ (cuando es 0 no se escribe: no hay notas con esa frecuencia).
-%	
-%		\[\begin{array}{l|rrrrrrrrrrrr}
-%		&1&2&3&4&5&6&7&8&9&10&11&12\\\hline
-%		1&&&&&&&&&&&&1\\\hline
-%		2&&&&&&2\\\hline
-%		3&&&&3\\\hline
-%		4&&&4\\\hline
-%		5&&3&2\\\hline
-%		6&&6\\\hline
-%		7&2&5\\\hline
-%		8&4&4\\\hline
-%		9&6&3\\\hline
-%		10&8&2\\\hline
-%		11&10&1\\\hline
-%		12&12&\\
-%		\end{array}\]
+	\subsection{Funciones \textit{E}-inducidas}
 		
+		Hay que pedir más requisitos a $f$ para que no solo modifique las notas, sino que además las imágenes se parezcan lo máximo posible a sus preimágenes, a las notas originales. En esencia, lo que se busca es una escala a \textbf{distancia mínima} de la escala cromática en cuanto a unos criterios concretos.
 		
-	\subsection{Funciones E-inducidas}
+		La manera matemática de formalizar esos criterios es definir una \textbf{métrica} para estas funciones; es decir, una manera de medir la distancia entre ellas para poder compararlas. La distancia $d$ entre dos funciones $f$ y $g$ cualesquiera, $d(f,g)$, debe cumplir estas propiedades básicas:
+		\begin{multicols}{2}
+			\begin{enumerate}
+				\item $d(f,g)>0$
+				\item $d(f,g)=0 \Longleftrightarrow f=g$
+				\item $d(f,g)=d(f,g)$
+				\item $d(f,g)\leq d(f,h)+d(h,g)$
+			\end{enumerate}
+		\end{multicols}
 		
-		Hay que pedir más requisitos a $f$ para que no solo modifique las notas, sino que además las imágenes se parezcan lo máximo posible a sus preimágenes, a las notas originales. En esencia, lo que se busca es una escala a \textbf{distancia mínima} en cuanto a unos criterios concretos.
+		La métrica que he escogido para comparar las funciones consiste en restar sus imágenes una a una, tomar el valor absoluto de esas diferencias y sumarlas: $d(f,g)=\sum\limits_{i=0}^{11} |f(i)-g(i)|$. Esto nos da una idea de cómo de ``lejos'' se encuentran una de la otra, y cumple los axiomas de una métrica.
 		
-		La manera matemática de formalizar esos criterios es definir una \textbf{métrica} para estas funciones; es decir, una manera de medirlas para poder compararlas, y así encontrar cuál de ellas es la menor.
+		Nos interesa entonces encontrar la función más cercana a la función identidad, es decir, la que enviaría la escala cromática a sus mismas notas. Así se priorizan las funciones con el mayor número de puntos fijos \textemdash ya que el sumando en ese índice sería 0\textemdash~, o que, al menos, se parezcan en su escala interválica asociada.
 		
-%		\begin{enumerate}
-%		\item $f$ debe ser creciente: si no, las dos notas decrecientes se deberían intercambiar. También se podrá sumar o restar 12 a las notas que lo requieran. La monotonía debe conservarse, además, en todas las octavas, por lo que las funciones deben acabar o por la nota con la que se empieza $+12$ o por una menor a ella.
-
-%		\item $f$ debe tener el mayor número de puntos fijos posible: las notas que puedan mantenerse estables al aplicar $f$ deben quedarse igual. Existen escalas para las que no se puede tener buena distribución, monotonía creciente y todas sus notas fijas, así que este criterio es menos prioritario. 
-		
-%		Por ejemplo, para la escala \{0, 1, 2\}, si se fijan las tres notas, $f$ empezaría con 0 1 2. Por (2), la nota asociada al 12 debe ser un 12. Entonces los otros tres 1's que faltan no se pueden asignar, ya que después del 2 no puede ir un 1 y antes del 12 no puede ir un 13. Por tanto, $f$ no estaría bien distribuida. La solución es que solo se fijen dos de las tres notas.
-		\[\left.\begin{array}{*{14}c}
-		\text{Cromática}&0&1&2&3&4&5&6&7&8&9&10&11&(12)\\
-		\text{Escala E}&0&1&2&&&\text{\cancel{1}}&&&\text{\cancel{13}}&&&&(12)\\
-		\end{array}\right.\]
-		
-%		\item Por último, de entre las $f$ que queden, se escogerán aquellas cuya distancia a la cromática sea menor. Se calculará para todo $i$ la expresión $|f(i)-i|$, y se sumarán todos los resultados. Esa suma será la \textit{puntuación} de dicha $f$. Las funciones con menor puntuación son las funciones de mejor ajuste.
-		
-%		\end{enumerate}
-		
-		Si aún quedan varias $f$ que cumplen todos los requisitos, se escogerá la más grave, la menor de ellas. De esta manera, dada cualquier escala E, la función E-inducida queda unívocamente determinada.
+		Puede ocurrir que con esta manera de medir quede más de una función a distancia mínima. Entre ellas, yo he escogido la más grave, y así, dada cualquier escala $E$, su función $E$-inducida queda unívocamente determinada.
 		
 		En el enlace \url{https://gitlab.com/dodecafonismo/f-inducida} se encuentra el código en Haskell de un programa que, dado una escala, produce su función inducida óptima con las propiedades descritas anteriormente.
 		
-		\subsection{Escalas utilizadas}
+		En el código se puede escoger entre o bien encontrar la mejor función que use solamente las notas de la subescala dada, o bien permitir transposiciones de ésta \textemdash que conservan, aun así, la escala interválica asociada\textemdash~y que es a lo que llamo ``inducir la raíz''. También permite cambiar el dominio, o superescala, y que no sea la cromática, aunque en ese caso puede que la métrica definida no devuelva resultados tan intuitivos.
 		
-		Las escalas escogidas para este experimento son cuatro escalas de distintos tamaños y sonoridades; desde el sonido oriental hasta el occidental clásico, pasando por el jazz moderno y el impresionismo.
-		
-		Son la escala pentatónica, la escala de tonos enteros, la escala heptafónica de Do Mayor y la escala octotónica. Estas son las funciones inducidas de dichas escalas según el algoritmo:
-		\[\left.\begin{array}{*{13}c}
-		\text{Cromática:}&0&1&2&3&4&5&6&7&8&9&10&11\\
-		\text{Pentatónica (5):}&0&0&2&2&4&4&7&7&7&9&9&0\\
-		\text{Intervalos:}&&2&&2&&3&&&2&&3&\\
-		\end{array}\right.\]		
-		\[\left.\begin{array}{*{13}c}
-		\text{Cromática:}&0&1&2&3&4&5&6&7&8&9&10&11\\
-		\text{Tonos enteros (6):}&0&0&2&2&4&4&6&6&8&8&10&10\\
-		\text{Intervalos:}&&2&&2&&2&&2&&2&&2\\
-		\end{array}\right.\]
-		\[\left.\begin{array}{*{13}c}
-		\text{Cromática:}&0&1&2&3&4&5&6&7&8&9&10&11\\
-		\text{Diatónica en Do (7):}&0&0&2&2&4&5&5&7&7&9&9&11\\
-		\text{Intervalos:}&&2&&2&1&&2&&2&&2&1\\
-		\end{array}\right.\]        
-		\[\left.\begin{array}{*{13}c}
-		\text{Cromática:}&0&1&2&3&4&5&6&7&8&9&10&11\\
-		\text{Octotónica (8):}&0&0&2&3&3&5&6&6&8&9&9&11\\
-		\text{Intervalos:}&&2&1&&2&1&&2&1&&2&1\\
-		\end{array}\right.\]
