--- a/Entrega IV/Serialismo-matematicas.bib
+++ b/Entrega IV/Serialismo-matematicas.bib
@@ -36,3 +36,32 @@
 	year         = {marzo de 2018},
 	note         = {Consultado en octubre de 2019}
 }
+
+@book{adorno,
+	title={{Disonancias. Introducci{\'o}n a la sociolog{\'\i}a de la m{\'u}sica}},
+	author={Adorno, T.W.},
+	url={\url{https://books.google.es/books?id=6uBiDwAAQBAJ}},
+	note={\url{https://books.google.es/books?id=6uBiDwAAQBAJ}},
+	year={1973}
+}
+
+
+
+@article{celia1,
+	author       = {Rubio Madrigal, Celia},
+	year         = {septiembre de 2019},
+	title        = {{Serialismo y matemáticas - I}},
+	journal      = {Divulgamat},
+	url          = {\url{http://vps280516.ovh.net/divulgamat15/index.php?option=com_content&view=article&id=18209:100-septiembre-2019-serialismo-y-matematicas-i&catid=67:ma-y-matemcas&directory=67}},
+	note = {\url{http://vps280516.ovh.net/divulgamat15/index.php?option=com_content&view=article&id=18209:100-septiembre-2019-serialismo-y-matematicas-i&catid=67:ma-y-matemcas&directory=67}}
+}
+
+
+@article{celia2,
+	author       = {Rubio Madrigal, Celia},
+	year         = {octubre de 2019},
+	title        = {{Serialismo y matemáticas - II}},
+	journal      = {Divulgamat},
+	url          = {\url{http://vps280516.ovh.net/divulgamat15/index.php?option=com_content&view=article&id=18227:101-octubre-2019-serialismo-y-matematicas-ii&catid=67:ma-y-matemcas&directory=67}},
+	note = {\url{http://vps280516.ovh.net/divulgamat15/index.php?option=com_content&view=article&id=18227:101-octubre-2019-serialismo-y-matematicas-ii&catid=67:ma-y-matemcas&directory=67}}
+}
