--- a/Entrega III/06.Acciones.tex
+++ b/Entrega III/06.Acciones.tex
@@ -1,6 +1,6 @@
 \section{Acciones, órbitas y estabilizadores}\label{ch:acciones}
 	\subsection{Acciones de grupos sobre conjuntos}
-		Dado un grupo $(G,\ *)$ y un conjunto $X$, la \emph{acción} de $(G,\ *)$ sobre $X$ es una función $\phi$ que asocia un elemento $g \in G$ y un elemento $x \in X$ -- el par $(g,x)$ -- a otro elemento $g\cdot x$ que también pertenece a $X$ \cite{armstrong}. $\phi :(g,x) \to g\cdot x$
+		Dado un grupo $(G,\ *)$ y un conjunto $X$, una \emph{acción} de $(G,\ *)$ sobre $X$ es una función $\phi$ que asocia un elemento $g \in G$ y un elemento $x \in X$ -- el par $(g,x)$ -- a otro elemento $g\cdot x$ que también pertenece a $X$ \cite{armstrong}. $\phi :(g,x) \to g\cdot x$
 	
 		La acción $\phi$, expresada mediante la operación ($\cdot$), debe cumplir dos condiciones:
 		\begin{enumerate}
