--- a/Entrega IV/09.Escalas.tex
+++ b/Entrega IV/09.Escalas.tex
@@ -72,7 +72,7 @@
 		La manera matemática de formalizar esos criterios es definir una \textbf{métrica} para estas funciones; es decir, una manera de medir la distancia entre ellas para poder compararlas. La distancia $d$ entre dos funciones $f$ y $g$ cualesquiera, $d(f,g)$, debe cumplir estas propiedades básicas:
 		\begin{multicols}{2}
 			\begin{enumerate}
-				\item $d(f,g)>0$
+				\item $d(f,g)\geq0$
 				\item $d(f,g)=0 \Longleftrightarrow f=g$
 				\item $d(f,g)=d(f,g)$
 				\item $d(f,g)\leq d(f,h)+d(h,g)$
