--- a/Entrega III (copia)/07.Espectros.tex
+++ b/Entrega III (copia)/07.Espectros.tex
@@ -86,7 +86,7 @@
 		
 		Una vez se tiene $\#\sigma_2$, solo falta calcular $\#\sigma_1$. Como las permutaciones contadas $\#\sigma$ son todas las de ${S}_n$ exceptuando las transportaciones, $\#\sigma=\frac{\#\mbox{S}_n}{n}=\frac{n!}{n}=(n-1)!$. Por otro lado, $\#\sigma_1 +\#\sigma_2=\#\sigma$. Entonces $\#\sigma_1=(n-1)!-\#\sigma_2$.
 		
-		Recuperando la fórmula del apartado \ref{espec}:
+		Recuperando la fórmula del apartado \ref{s:itr}:
 		
 		\[\#\mbox{Espectros}=
 		\frac{1}{4}\left(\#\sigma_1+2\cdot(\#\sigma_2)\right)=
@@ -115,7 +115,7 @@
 			\ddiagram[no numbers, no arrow]{4,5,7,1,6,3,8,2,11,0,9,10}
 			\end{center}
 		\end{figure}
-		Ahora calcularemos los espectros formados mediante todas las transformaciones del grupo generado por $\{S,\ T,\ V,\ C\}$; es decir, por ${D}_{n}\times {D}_{n}$. Volviendo a la representación mediante diagramas de reloj, el problema es equivalente a averiguar cuántos diagramas distintos, sin números ni flechas, se pueden dibujar. La flecha indica lo transformado por $V$ y $C$, mientras que los números indican lo transformado por $S$ y $T$. Un diagrama sin estos dos elementos representa entonces todo un espectro serial. Â¿Cuántos diagramas esencialmente distintos hay? De nuevo, por el lema de Burnside:
+		Ahora calcularemos los espectros formados mediante todas las transformaciones del grupo generado por $\{S,\ T,\ V,\ C\}$; es decir, por ${D}_{n}\times {D}_{n}$. Volviendo a la representación mediante diagramas de reloj, el problema es equivalente a averiguar cuántos diagramas distintos, sin números ni flechas, se pueden dibujar. La flecha indica lo transformado por $V$ y $C$, mientras que los números indican lo transformado por $S$ y $T$. Un diagrama sin estos dos elementos representa entonces todo un espectro serial. ¿Cuántos diagramas esencialmente distintos hay? De nuevo, por el lema de Burnside:
 		\[\#\mbox{Espectros}=\frac{1}{|{D}_{n}\times{D}_{n}|}\sum_{\sigma\in{S}_n}|{Stab}(\sigma)|=\frac{1}{2n\cdot2n}\sum_{\sigma\in{S}_n}|{Stab}(\sigma)|\]
 		
 		En vez de expresar el sumatorio como ``para cada $\sigma$, el número de $\Psi$ que fijan $\sigma$'', se puede expresar como ``para cada $\Psi$, el número de $\sigma$ fijados por $\Psi$''. La fórmula queda de esta manera:
@@ -399,7 +399,7 @@
 		
 		\subsubsection[Elementos estables mediante $S$]{Elementos estables mediante ${S}$}
 		
-		Los elementos estables mediante $S$ son aquellos que quedan invariantes mediante reflexiones. En este punto se ha de separar por paridad de $n$. 
+		Los elementos estables mediante $S$ son aquellos que quedan invariantes mediante reflexiones. De nuevo, en este punto se ha de separar por paridad de $n$. 
 		
 		Para $n$ impar, existen $n$ reflexiones para cada uno de los ejes de simetría que pasan por cada vértice. Después, hay $n$ formas de escoger el primer vértice de la secuencia. Ahora hay $\frac{n-1}{2}$ parejas de vértices; se escoge los primeros miembros entre ellos de $2^{\frac{n-1}{2}}$ formas, tras lo cual éstos se ordenan de $\frac{n-1}{2}!$ formas. Esto da un resultado de  $n^2\cdot2^{\frac{n-1}{2}}\cdot\frac{n-1}{2}!$ polígonos invariantes.
 		
