--- a/Entrega III/07.Espectros.tex
+++ b/Entrega III/07.Espectros.tex
@@ -23,12 +23,15 @@
 	
 		Primero, se ha de ver que una permutación nunca va a ser igual ni equivalente mediante transposiciones a su inversa.
 
-		\begin{align*}
-		-\sigma(m)&\equiv\sigma(m)\Longleftrightarrow\\
-		0&\equiv2\sigma(m)\Longleftrightarrow\\
-		n&\equiv2\sigma(m)\Longleftrightarrow\\
-		\frac{n}{2}&\equiv\sigma(m)
-		\end{align*}
+%		\begin{align*}
+%		-\sigma(m)&\equiv\sigma(m)\Longleftrightarrow\\
+%		0&\equiv2\sigma(m)\Longleftrightarrow\\
+%		n&\equiv2\sigma(m)\Longleftrightarrow\\
+%		\frac{n}{2}&\equiv\sigma(m)
+%		\end{align*}
+\begin{center}
+		\includegraphics{Serialismo-matematicas-diagrama-2}
+\end{center}
 		
 		Así, $\sigma(m)$ sería constante para todo $m\in \mathbb{Z} / (n)$, lo cual es imposible. Esto implica que ninguna permutación va a tener a $I$ en su estabilizador, por lo que $\#\sigma_4=0$. Queda entonces calcular cuántas permutaciones son equivalentes a su retrogradación y cuántas a su retrogradación inversa. La suma de ambas dará $\#\sigma_2$.
 	
@@ -86,7 +89,7 @@
 		
 		Una vez se tiene $\#\sigma_2$, solo falta calcular $\#\sigma_1$. Como las permutaciones contadas $\#\sigma$ son todas las de ${S}_n$ exceptuando las transportaciones, $\#\sigma=\frac{\#\mbox{S}_n}{n}=\frac{n!}{n}=(n-1)!$. Por otro lado, $\#\sigma_1 +\#\sigma_2=\#\sigma$. Entonces $\#\sigma_1=(n-1)!-\#\sigma_2$.
 		
-		Recuperando la fórmula del apartado \ref{espec}:
+		Recuperando la fórmula del apartado \ref{s:itr}:
 		
 		\[\#\mbox{Espectros}=
 		\frac{1}{4}\left(\#\sigma_1+2\cdot(\#\sigma_2)\right)=
@@ -112,7 +115,8 @@
 	
 		\begin{figure}[h]
 			\begin{center}
-			\ddiagram[no numbers, no arrow]{4,5,7,1,6,3,8,2,11,0,9,10}
+%			\ddiagram[no numbers, no arrow]{4,5,7,1,6,3,8,2,11,0,9,10}
+			\includegraphics{Serialismo-matematicas-diagrama-3}
 			\end{center}
 		\end{figure}
 		Ahora calcularemos los espectros formados mediante todas las transformaciones del grupo generado por $\{S,\ T,\ V,\ C\}$; es decir, por ${D}_{n}\times {D}_{n}$. Volviendo a la representación mediante diagramas de reloj, el problema es equivalente a averiguar cuántos diagramas distintos, sin números ni flechas, se pueden dibujar. La flecha indica lo transformado por $V$ y $C$, mientras que los números indican lo transformado por $S$ y $T$. Un diagrama sin estos dos elementos representa entonces todo un espectro serial. Â¿Cuántos diagramas esencialmente distintos hay? De nuevo, por el lema de Burnside:
@@ -151,15 +155,16 @@
 		
 %		\begin{figure}[h]
 			\begin{center}
-				\begin{tikzpicture}
-			\node [draw,circle,inner sep=0,minimum height=2cm] at (0,0) {};
-			\foreach\y in {0,1,2,3} {
-				\foreach\x in {0,1} {
-					\draw[thin] (90-45*\x-90*\y:0.85) -- (90-45*\x-90*\y:1.35) node[fill=white,inner sep=0pt] {\x$^{(\y)}$};
-				}
-			}
-			\draw (90:1) -- (-45:1);
-			\end{tikzpicture}
+%				\begin{tikzpicture}
+%			\node [draw,circle,inner sep=0,minimum height=2cm] at (0,0) {};
+%			\foreach\y in {0,1,2,3} {
+%				\foreach\x in {0,1} {
+%					\draw[thin] (90-45*\x-90*\y:0.85) -- (90-45*\x-90*\y:1.35) node[fill=white,inner sep=0pt] {\x$^{(\y)}$};
+%				}
+%			}
+%			\draw (90:1) -- (-45:1);
+%			\end{tikzpicture}
+			\includegraphics{Serialismo-matematicas-diagrama-4}
 			\end{center}
 %		\end{figure}
 		
@@ -168,230 +173,244 @@
 		En nuestro ejemplo, si escogemos el siguiente comienzo del ciclo como el 0$^{(2)}$, como 2 no es coprimo con $\frac{n}{d}=4$, quedaría de esta manera:
 		
 		\begin{center}
-			\begin{multicols}{2}
-				\begin{tikzpicture}
-				\node [draw,circle,inner sep=0,minimum height=2cm] at (0,0) {};
-				\foreach\y in {0,1,2,3} {
-					\foreach\x in {0,1} {
-						\draw[thin] (90-45*\x-90*\y:0.85) -- (90-45*\x-90*\y:1.35) node[fill=white,inner sep=0pt] {\x$^{(\y)}$};
-					}
-				}
-				\draw (90:1) -- (-45:1) -- (-90:1);
-				\end{tikzpicture}
-				
-				\begin{tikzpicture}
-				\node [draw,circle,inner sep=0,minimum height=2cm] at (0,0) {};
-				\foreach\y in {0,1,2,3} {
-					\foreach\x in {0,1} {
-						\draw[thin] (90-45*\x-90*\y:0.85) -- (90-45*\x-90*\y:1.35) node[fill=white,inner sep=0pt] {\x$^{(\y)}$};
-					}
-				}
-				\draw (90:1) -- (-45:1) -- (-90:1);
-				\draw[rotate=-180] (90:1) -- (-45:1) -- (-90:1);
-				\end{tikzpicture}
-			\end{multicols}
+%			\begin{multicols}{2}
+%				\begin{tikzpicture}
+%				\node [draw,circle,inner sep=0,minimum height=2cm] at (0,0) {};
+%				\foreach\y in {0,1,2,3} {
+%					\foreach\x in {0,1} {
+%						\draw[thin] (90-45*\x-90*\y:0.85) -- (90-45*\x-90*\y:1.35) node[fill=white,inner sep=0pt] {\x$^{(\y)}$};
+%					}
+%				}
+%				\draw (90:1) -- (-45:1) -- (-90:1);
+%				\end{tikzpicture}
+%				
+%				\begin{tikzpicture}
+%				\node [draw,circle,inner sep=0,minimum height=2cm] at (0,0) {};
+%				\foreach\y in {0,1,2,3} {
+%					\foreach\x in {0,1} {
+%						\draw[thin] (90-45*\x-90*\y:0.85) -- (90-45*\x-90*\y:1.35) node[fill=white,inner sep=0pt] {\x$^{(\y)}$};
+%					}
+%				}
+%				\draw (90:1) -- (-45:1) -- (-90:1);
+%				\draw[rotate=-180] (90:1) -- (-45:1) -- (-90:1);
+%				\end{tikzpicture}
+%			\end{multicols}
+		\includegraphics{Serialismo-matematicas-diagrama-5}
 		\end{center}
 
 		Efectivamente, el diagrama se cierra antes de pasar por todos los vértices. En cambio, si escogemos 0$^{(1)}$:
-		\begin{multicols}{4}			
-			\begin{tikzpicture}
-			\node [draw,circle,inner sep=0,minimum height=2cm] at (0,0) {};
-			\foreach\y in {0,1,2,3} {
-				\foreach\x in {0,1} {
-					\draw[thin] (90-45*\x-90*\y:0.85) -- (90-45*\x-90*\y:1.35) node[fill=white,inner sep=0pt] {\x$^{(\y)}$};
-				}
-			}
-		\draw (90:1) -- (-45:1) -- (0:1);
-%		\draw[rotate=-90] (90:1) -- (-45:1) -- (0:1);
-%		\draw[rotate=180] (90:1) -- (-45:1) -- (0:1);
-%		\draw[rotate=90] (90:1) -- (-45:1) -- (0:1);
-			\end{tikzpicture}
-			
-			\begin{tikzpicture}
-			\node [draw,circle,inner sep=0,minimum height=2cm] at (0,0) {};
-			\foreach\y in {0,1,2,3} {
-				\foreach\x in {0,1} {
-					\draw[thin] (90-45*\x-90*\y:0.85) -- (90-45*\x-90*\y:1.35) node[fill=white,inner sep=0pt] {\x$^{(\y)}$};
-				}
-			}
-			\draw (90:1) -- (-45:1) -- (0:1);
-			\draw[rotate=-90] (90:1) -- (-45:1) -- (0:1);
+%		\begin{multicols}{4}			
+%			\begin{tikzpicture}
+%			\node [draw,circle,inner sep=0,minimum height=2cm] at (0,0) {};
+%			\foreach\y in {0,1,2,3} {
+%				\foreach\x in {0,1} {
+%					\draw[thin] (90-45*\x-90*\y:0.85) -- (90-45*\x-90*\y:1.35) node[fill=white,inner sep=0pt] {\x$^{(\y)}$};
+%				}
+%			}
+%		\draw (90:1) -- (-45:1) -- (0:1);
+%%		\draw[rotate=-90] (90:1) -- (-45:1) -- (0:1);
+%%		\draw[rotate=180] (90:1) -- (-45:1) -- (0:1);
+%%		\draw[rotate=90] (90:1) -- (-45:1) -- (0:1);
+%			\end{tikzpicture}
+%			
+%			\begin{tikzpicture}
+%			\node [draw,circle,inner sep=0,minimum height=2cm] at (0,0) {};
+%			\foreach\y in {0,1,2,3} {
+%				\foreach\x in {0,1} {
+%					\draw[thin] (90-45*\x-90*\y:0.85) -- (90-45*\x-90*\y:1.35) node[fill=white,inner sep=0pt] {\x$^{(\y)}$};
+%				}
+%			}
+%			\draw (90:1) -- (-45:1) -- (0:1);
+%			\draw[rotate=-90] (90:1) -- (-45:1) -- (0:1);
+%%			\draw[rotate=180] (90:1) -- (-45:1) -- (0:1);
+%%			\draw[rotate=90] (90:1) -- (-45:1) -- (0:1);
+%			\end{tikzpicture}
+%			
+%			\begin{tikzpicture}
+%			\node [draw,circle,inner sep=0,minimum height=2cm] at (0,0) {};
+%			\foreach\y in {0,1,2,3} {
+%				\foreach\x in {0,1} {
+%					\draw[thin] (90-45*\x-90*\y:0.85) -- (90-45*\x-90*\y:1.35) node[fill=white,inner sep=0pt] {\x$^{(\y)}$};
+%				}
+%			}
+%			\draw (90:1) -- (-45:1) -- (0:1);
+%			\draw[rotate=-90] (90:1) -- (-45:1) -- (0:1);
+%			\draw[rotate=180] (90:1) -- (-45:1) -- (0:1);
+%%			\draw[rotate=90] (90:1) -- (-45:1) -- (0:1);
+%			\end{tikzpicture}
+%			
+%			\begin{tikzpicture}
+%			\node [draw,circle,inner sep=0,minimum height=2cm] at (0,0) {};
+%			\foreach\y in {0,1,2,3} {
+%				\foreach\x in {0,1} {
+%					\draw[thin] (90-45*\x-90*\y:0.85) -- (90-45*\x-90*\y:1.35) node[fill=white,inner sep=0pt] {\x$^{(\y)}$};
+%				}
+%			}
+%			\draw (90:1) -- (-45:1) -- (0:1);
+%			\draw[rotate=-90] (90:1) -- (-45:1) -- (0:1);
 %			\draw[rotate=180] (90:1) -- (-45:1) -- (0:1);
 %			\draw[rotate=90] (90:1) -- (-45:1) -- (0:1);
-			\end{tikzpicture}
-			
-			\begin{tikzpicture}
-			\node [draw,circle,inner sep=0,minimum height=2cm] at (0,0) {};
-			\foreach\y in {0,1,2,3} {
-				\foreach\x in {0,1} {
-					\draw[thin] (90-45*\x-90*\y:0.85) -- (90-45*\x-90*\y:1.35) node[fill=white,inner sep=0pt] {\x$^{(\y)}$};
-				}
-			}
-			\draw (90:1) -- (-45:1) -- (0:1);
-			\draw[rotate=-90] (90:1) -- (-45:1) -- (0:1);
-			\draw[rotate=180] (90:1) -- (-45:1) -- (0:1);
-%			\draw[rotate=90] (90:1) -- (-45:1) -- (0:1);
-			\end{tikzpicture}
-			
-			\begin{tikzpicture}
-			\node [draw,circle,inner sep=0,minimum height=2cm] at (0,0) {};
-			\foreach\y in {0,1,2,3} {
-				\foreach\x in {0,1} {
-					\draw[thin] (90-45*\x-90*\y:0.85) -- (90-45*\x-90*\y:1.35) node[fill=white,inner sep=0pt] {\x$^{(\y)}$};
-				}
-			}
-			\draw (90:1) -- (-45:1) -- (0:1);
-			\draw[rotate=-90] (90:1) -- (-45:1) -- (0:1);
-			\draw[rotate=180] (90:1) -- (-45:1) -- (0:1);
-			\draw[rotate=90] (90:1) -- (-45:1) -- (0:1);
-			\end{tikzpicture}
-		\end{multicols}
+%			\end{tikzpicture}
+%		\end{multicols}
+\begin{center}
+	\includegraphics{Serialismo-matematicas-diagrama-6}
+\end{center}
 	
 		Y con 0$^{(3)}$:
-		\begin{multicols}{4}			
-			\begin{tikzpicture}
-			\node [draw,circle,inner sep=0,minimum height=2cm] at (0,0) {};
-			\foreach\y in {0,1,2,3} {
-				\foreach\x in {0,1} {
-					\draw[thin] (90-45*\x-90*\y:0.85) -- (90-45*\x-90*\y:1.35) node[fill=white,inner sep=0pt] {\x$^{(\y)}$};
-				}
-			}
-			\draw (90:1) -- (-45:1) -- (180:1);
-	%		\draw[rotate=-90] (90:1) -- (-45:1) -- (180:1);
-	%		\draw[rotate=180] (90:1) -- (-45:1) -- (180:1);
-	%		\draw[rotate=90] (90:1) -- (-45:1) -- (180:1);
-			\end{tikzpicture}
-			
-			\begin{tikzpicture}
-			\node [draw,circle,inner sep=0,minimum height=2cm] at (0,0) {};
-			\foreach\y in {0,1,2,3} {
-				\foreach\x in {0,1} {
-					\draw[thin] (90-45*\x-90*\y:0.85) -- (90-45*\x-90*\y:1.35) node[fill=white,inner sep=0pt] {\x$^{(\y)}$};
-				}
-			}
-			\draw (90:1) -- (-45:1) -- (180:1);
-			\draw[rotate=-90] (90:1) -- (-45:1) -- (180:1);
-	%		\draw[rotate=180] (90:1) -- (-45:1) -- (180:1);
-	%		\draw[rotate=90] (90:1) -- (-45:1) -- (180:1);
-			\end{tikzpicture}
-			
-			\begin{tikzpicture}
-			\node [draw,circle,inner sep=0,minimum height=2cm] at (0,0) {};
-			\foreach\y in {0,1,2,3} {
-				\foreach\x in {0,1} {
-					\draw[thin] (90-45*\x-90*\y:0.85) -- (90-45*\x-90*\y:1.35) node[fill=white,inner sep=0pt] {\x$^{(\y)}$};
-				}
-			}
-			\draw (90:1) -- (-45:1) -- (180:1);
-			\draw[rotate=-90] (90:1) -- (-45:1) -- (180:1);
-			\draw[rotate=180] (90:1) -- (-45:1) -- (180:1);
-	%		\draw[rotate=90] (90:1) -- (-45:1) -- (180:1);
-			\end{tikzpicture}
-			
-			\begin{tikzpicture}
-			\node [draw,circle,inner sep=0,minimum height=2cm] at (0,0) {};
-			\foreach\y in {0,1,2,3} {
-				\foreach\x in {0,1} {
-					\draw[thin] (90-45*\x-90*\y:0.85) -- (90-45*\x-90*\y:1.35) node[fill=white,inner sep=0pt] {\x$^{(\y)}$};
-				}
-			}
-			\draw (90:1) -- (-45:1) -- (180:1);
-			\draw[rotate=-90] (90:1) -- (-45:1) -- (180:1);
-			\draw[rotate=180] (90:1) -- (-45:1) -- (180:1);
-			\draw[rotate=90] (90:1) -- (-45:1) -- (180:1);
-			\end{tikzpicture}
-		\end{multicols}
+%		\begin{multicols}{4}			
+%			\begin{tikzpicture}
+%			\node [draw,circle,inner sep=0,minimum height=2cm] at (0,0) {};
+%			\foreach\y in {0,1,2,3} {
+%				\foreach\x in {0,1} {
+%					\draw[thin] (90-45*\x-90*\y:0.85) -- (90-45*\x-90*\y:1.35) node[fill=white,inner sep=0pt] {\x$^{(\y)}$};
+%				}
+%			}
+%			\draw (90:1) -- (-45:1) -- (180:1);
+%	%		\draw[rotate=-90] (90:1) -- (-45:1) -- (180:1);
+%	%		\draw[rotate=180] (90:1) -- (-45:1) -- (180:1);
+%	%		\draw[rotate=90] (90:1) -- (-45:1) -- (180:1);
+%			\end{tikzpicture}
+%			
+%			\begin{tikzpicture}
+%			\node [draw,circle,inner sep=0,minimum height=2cm] at (0,0) {};
+%			\foreach\y in {0,1,2,3} {
+%				\foreach\x in {0,1} {
+%					\draw[thin] (90-45*\x-90*\y:0.85) -- (90-45*\x-90*\y:1.35) node[fill=white,inner sep=0pt] {\x$^{(\y)}$};
+%				}
+%			}
+%			\draw (90:1) -- (-45:1) -- (180:1);
+%			\draw[rotate=-90] (90:1) -- (-45:1) -- (180:1);
+%	%		\draw[rotate=180] (90:1) -- (-45:1) -- (180:1);
+%	%		\draw[rotate=90] (90:1) -- (-45:1) -- (180:1);
+%			\end{tikzpicture}
+%			
+%			\begin{tikzpicture}
+%			\node [draw,circle,inner sep=0,minimum height=2cm] at (0,0) {};
+%			\foreach\y in {0,1,2,3} {
+%				\foreach\x in {0,1} {
+%					\draw[thin] (90-45*\x-90*\y:0.85) -- (90-45*\x-90*\y:1.35) node[fill=white,inner sep=0pt] {\x$^{(\y)}$};
+%				}
+%			}
+%			\draw (90:1) -- (-45:1) -- (180:1);
+%			\draw[rotate=-90] (90:1) -- (-45:1) -- (180:1);
+%			\draw[rotate=180] (90:1) -- (-45:1) -- (180:1);
+%	%		\draw[rotate=90] (90:1) -- (-45:1) -- (180:1);
+%			\end{tikzpicture}
+%			
+%			\begin{tikzpicture}
+%			\node [draw,circle,inner sep=0,minimum height=2cm] at (0,0) {};
+%			\foreach\y in {0,1,2,3} {
+%				\foreach\x in {0,1} {
+%					\draw[thin] (90-45*\x-90*\y:0.85) -- (90-45*\x-90*\y:1.35) node[fill=white,inner sep=0pt] {\x$^{(\y)}$};
+%				}
+%			}
+%			\draw (90:1) -- (-45:1) -- (180:1);
+%			\draw[rotate=-90] (90:1) -- (-45:1) -- (180:1);
+%			\draw[rotate=180] (90:1) -- (-45:1) -- (180:1);
+%			\draw[rotate=90] (90:1) -- (-45:1) -- (180:1);
+%			\end{tikzpicture}
+%		\end{multicols}
+\begin{center}
+		\includegraphics{Serialismo-matematicas-diagrama-7}
+\end{center}
 		
 		Sea $d=3$ y $n=6$. Escogiendo el primer número como 0$^{(0)}$, el segundo como 1$^{(0)}$ y el tercero como 2$^{(1)}$, no queda más remedio que escoger como comienzo del segundo ciclo el 0$^{(1)}$.
 		
-	\begin{multicols}{3}
-		\begin{tikzpicture}
-		\node [draw,circle,inner sep=0,minimum height=2cm] at (0,0) {};
-		\foreach\y in {0,1} {
-			\foreach\x in {0,1,2} {
-				\draw[thin] (90-60*\x-180*\y:0.85) -- (90-60*\x-180*\y:1.35) node[fill=white,inner sep=0pt] {\x$^{(\y)}$};
-			}
-		}
-		\draw (90:1) -- (30:1) -- (150:1);
-		\end{tikzpicture}
-		
-		\begin{tikzpicture}
-		\node [draw,circle,inner sep=0,minimum height=2cm] at (0,0) {};
-		\foreach\y in {0,1} {
-			\foreach\x in {0,1,2} {
-				\draw[thin] (90-60*\x-180*\y:0.85) -- (90-60*\x-180*\y:1.35) node[fill=white,inner sep=0pt] {\x$^{(\y)}$};
-			}
-		}
-		\draw (90:1) -- (30:1) -- (150:1) -- (-90:1);
-		%		\draw[rotate=180] (90:1) -- (30:1) -- (150:1) -- (-90:1);
-		\end{tikzpicture}
-		
-		\begin{tikzpicture}
-		\node [draw,circle,inner sep=0,minimum height=2cm] at (0,0) {};
-		\foreach\y in {0,1} {
-			\foreach\x in {0,1,2} {
-				\draw[thin] (90-60*\x-180*\y:0.85) -- (90-60*\x-180*\y:1.35) node[fill=white,inner sep=0pt] {\x$^{(\y)}$};
-			}
-		}
-		\draw (90:1) -- (30:1) -- (150:1) -- (-90:1);
-		\draw[rotate=180] (90:1) -- (30:1) -- (150:1) -- (-90:1);
-		\end{tikzpicture}
-	\end{multicols}
+%	\begin{multicols}{3}
+%		\begin{tikzpicture}
+%		\node [draw,circle,inner sep=0,minimum height=2cm] at (0,0) {};
+%		\foreach\y in {0,1} {
+%			\foreach\x in {0,1,2} {
+%				\draw[thin] (90-60*\x-180*\y:0.85) -- (90-60*\x-180*\y:1.35) node[fill=white,inner sep=0pt] {\x$^{(\y)}$};
+%			}
+%		}
+%		\draw (90:1) -- (30:1) -- (150:1);
+%		\end{tikzpicture}
+%		
+%		\begin{tikzpicture}
+%		\node [draw,circle,inner sep=0,minimum height=2cm] at (0,0) {};
+%		\foreach\y in {0,1} {
+%			\foreach\x in {0,1,2} {
+%				\draw[thin] (90-60*\x-180*\y:0.85) -- (90-60*\x-180*\y:1.35) node[fill=white,inner sep=0pt] {\x$^{(\y)}$};
+%			}
+%		}
+%		\draw (90:1) -- (30:1) -- (150:1) -- (-90:1);
+%		%		\draw[rotate=180] (90:1) -- (30:1) -- (150:1) -- (-90:1);
+%		\end{tikzpicture}
+%		
+%		\begin{tikzpicture}
+%		\node [draw,circle,inner sep=0,minimum height=2cm] at (0,0) {};
+%		\foreach\y in {0,1} {
+%			\foreach\x in {0,1,2} {
+%				\draw[thin] (90-60*\x-180*\y:0.85) -- (90-60*\x-180*\y:1.35) node[fill=white,inner sep=0pt] {\x$^{(\y)}$};
+%			}
+%		}
+%		\draw (90:1) -- (30:1) -- (150:1) -- (-90:1);
+%		\draw[rotate=180] (90:1) -- (30:1) -- (150:1) -- (-90:1);
+%		\end{tikzpicture}
+%	\end{multicols}
+\begin{center}
+	\includegraphics{Serialismo-matematicas-diagrama-8}
+\end{center}
 
 		Pero también podría aparecer este mismo comienzo con la parte final dada la vuelta, simétrica, de esta manera: 0$^{(0)}$, 1$^{(0)}$, 2$^{(1)}$, 2$^{(0)}$, 1$^{(1)}$, 0$^{(1)}$. Esta construcción no está incluida en lo descrito anteriormente, y sin embargo es invariante con respecto a T, V y C a la vez. 
 		
-		\begin{multicols}{3}
-			\begin{tikzpicture}
-			\node [draw,circle,inner sep=0,minimum height=2cm] at (0,0) {};
-			\foreach\y in {0,1} {
-				\foreach\x in {0,1,2} {
-					\draw[thin] (90-60*\x-180*\y:0.85) -- (90-60*\x-180*\y:1.35) node[fill=white,inner sep=0pt] {\x$^{(\y)}$};
-				}
-			}
-			\draw (90:1) -- (30:1) -- (150:1);
-			\end{tikzpicture}
-			
-			\begin{tikzpicture}
-			\node [draw,circle,inner sep=0,minimum height=2cm] at (0,0) {};
-			\foreach\y in {0,1} {
-				\foreach\x in {0,1,2} {
-					\draw[thin] (90-60*\x-180*\y:0.85) -- (90-60*\x-180*\y:1.35) node[fill=white,inner sep=0pt] {\x$^{(\y)}$};
-				}
-			}
-			\draw (90:1) -- (30:1) -- (150:1);
-			\draw[rotate=180] (90:1) -- (30:1) -- (150:1);
-			\end{tikzpicture}
-			
-			\begin{tikzpicture}
-			\node [draw,circle,inner sep=0,minimum height=2cm] at (0,0) {};
-			\foreach\y in {0,1} {
-				\foreach\x in {0,1,2} {
-					\draw[thin] (90-60*\x-180*\y:0.85) -- (90-60*\x-180*\y:1.35) node[fill=white,inner sep=0pt] {\x$^{(\y)}$};
-				}
-			}
-			\draw (90:1) -- (30:1) -- (150:1);
-			\draw[rotate=180] (90:1) -- (30:1) -- (150:1);
-			\draw[] (-90:1) -- (90:1);
-			\draw[] (150:1) -- (-30:1);
-			\end{tikzpicture}
-		\end{multicols}
+%		\begin{multicols}{3}
+%			\begin{tikzpicture}
+%			\node [draw,circle,inner sep=0,minimum height=2cm] at (0,0) {};
+%			\foreach\y in {0,1} {
+%				\foreach\x in {0,1,2} {
+%					\draw[thin] (90-60*\x-180*\y:0.85) -- (90-60*\x-180*\y:1.35) node[fill=white,inner sep=0pt] {\x$^{(\y)}$};
+%				}
+%			}
+%			\draw (90:1) -- (30:1) -- (150:1);
+%			\end{tikzpicture}
+%			
+%			\begin{tikzpicture}
+%			\node [draw,circle,inner sep=0,minimum height=2cm] at (0,0) {};
+%			\foreach\y in {0,1} {
+%				\foreach\x in {0,1,2} {
+%					\draw[thin] (90-60*\x-180*\y:0.85) -- (90-60*\x-180*\y:1.35) node[fill=white,inner sep=0pt] {\x$^{(\y)}$};
+%				}
+%			}
+%			\draw (90:1) -- (30:1) -- (150:1);
+%			\draw[rotate=180] (90:1) -- (30:1) -- (150:1);
+%			\end{tikzpicture}
+%			
+%			\begin{tikzpicture}
+%			\node [draw,circle,inner sep=0,minimum height=2cm] at (0,0) {};
+%			\foreach\y in {0,1} {
+%				\foreach\x in {0,1,2} {
+%					\draw[thin] (90-60*\x-180*\y:0.85) -- (90-60*\x-180*\y:1.35) node[fill=white,inner sep=0pt] {\x$^{(\y)}$};
+%				}
+%			}
+%			\draw (90:1) -- (30:1) -- (150:1);
+%			\draw[rotate=180] (90:1) -- (30:1) -- (150:1);
+%			\draw[] (-90:1) -- (90:1);
+%			\draw[] (150:1) -- (-30:1);
+%			\end{tikzpicture}
+%		\end{multicols}
+\begin{center}
+		\includegraphics{Serialismo-matematicas-diagrama-9}
+\end{center}
 		
 		Y es que con $n$ par, al rotar $\uptheta_{{n}/{2}}$ el diagrama, éste puede llegar con la orientación cambiada. Esto puede ocurrir cuando haya una diagonal; es decir, cuando entre dos notas haya un intervalo de $\frac{n}{2}$.
 		
 		\begin{center}
-		\begin{tikzpicture}[ddiagram]
-		\ddiagram[no tikz]{0,1,5,2,4,3}
-		
-		\draw[style=ddihedralArrow] (2.5,0) -- node[above=5pt] {T$^3$} (4,0);
-		
-		\ddiagram[no tikz, xshift=4cm]{3,4,2,5,1,0}
-		
-		\draw[style=ddihedralArrow,xshift=6cm] (2.5,0) -- node[above=5pt] {V} (4,0);
-		
-		\ddiagram[no tikz, xshift=8cm, arrow shift=1.25]{3,0,1,5,2,4}
-		
-		\draw[style=ddihedralArrow] (12.3,-2.5) -- (12.3,-3.25) -- node [fill=white] {C} (0,-3.25) -- (0,-2.5);
-		\end{tikzpicture}
+%		\begin{tikzpicture}[ddiagram]
+%		\ddiagram[no tikz]{0,1,5,2,4,3}
+%		
+%		\draw[style=ddihedralArrow] (2.5,0) -- node[above=5pt] {T$^3$} (4,0);
+%		
+%		\ddiagram[no tikz, xshift=4cm]{3,4,2,5,1,0}
+%		
+%		\draw[style=ddihedralArrow,xshift=6cm] (2.5,0) -- node[above=5pt] {V} (4,0);
+%		
+%		\ddiagram[no tikz, xshift=8cm, arrow shift=1.25]{3,0,1,5,2,4}
+%		
+%		\draw[style=ddihedralArrow] (12.3,-2.5) -- (12.3,-3.25) -- node [fill=white] {C} (0,-3.25) -- (0,-2.5);
+%		\end{tikzpicture}
+		\includegraphics{Serialismo-matematicas-diagrama-10}
 		\end{center}
 		
 		Se escoge el primer punto de entre $\frac{n}{2}$ posibilidades. No son $n$ ya que saldría la misma figura si se escoge el punto antipodal.
@@ -431,42 +450,53 @@
 	\label{s:trivcase}
 		Con $n=0$ se da el caso de medefonismo. El grupo simétrico de orden 0 tiene $0!=1$ elemento. Por tanto, hay una sola posible serie, $\sigma$, que es la que no tiene ninguna nota. El medefonismo es comúnmente llamado silencio.
 		
-		\[\sigma=\drow{}
-		\qquad\qquad\qquad
-		\begin{array}{l||r}
-		&\\
-		\hline
-		\hline
-		&\\
-		\hline
-		&
-		\end{array}\]
+%		\[\sigma=\drow{}
+%		\qquad\qquad\qquad
+%		\begin{array}{l||r}
+%		&\\
+%		\hline
+%		\hline
+%		&\\
+%		\hline
+%		&
+%		\end{array}\]
+\begin{center}
+			\includegraphics{Serialismo-matematicas-diagrama-11}
+\end{center}
 	
 		Con $n=1$ se da el caso de monofonismo. Con solamente una posible nota, el grupo simétrico de orden 1 tiene $1!=1$ elemento. Por tanto, hay una sola posible serie, $\sigma_0$, que es igual a su inversa, a su retrogradación y a su retrogradación inversa:
-		\[\sigma_0=\drow{0}
-		\qquad\qquad\qquad
-		\begin{array}{l|c|r}
-			&{I}_{0}&\\
-			\hline
-			{T}_{0}&0&{R}_{0}\\
-			\hline
-			&{IR}_{0}&\\
-			\hline
-			&{RI}_{0}&
-		\end{array}\]
+		
+%		\[\sigma_0=\drow{0}
+%		\qquad\qquad\qquad
+%		\begin{array}{l|c|r}
+%			&{I}_{0}&\\
+%			\hline
+%			{T}_{0}&0&{R}_{0}\\
+%			\hline
+%			&{IR}_{0}&\\
+%			\hline
+%			&{RI}_{0}&
+%		\end{array}\]
+\begin{center}
+					\includegraphics{Serialismo-matematicas-diagrama-12}
+\end{center}
 	
 		Con $n=2$ se da el caso de difonismo. Tiene dos posibles notas, así que su grupo simétrico, el de orden 2, tiene $2!=2$ elementos. Por tanto, hay dos series distintas, $\sigma_0$ y $\sigma_1$. Se puede observar que ambas pertenecen al mismo espectro serial, dado que $\sigma_1={T}^1(\sigma_0)$. Además, al igual que en el monofonismo, ambas coinciden con sus inversas, incumpliendo la regla general para $n>2$ probada en el apartado \ref{s:itr}.
-		\[\sigma_0=\drow{0,1}
-		\qquad\qquad
-		\begin{array}{l|cc|r}
-			&{I}_{0}&{I}_{1}&\\
-			\hline
-			{T}_{0}&0&1&{R}_{0}\\
-			{T}_{1}&1&0&{R}_{1}\\
-			\hline
-			&{IR}_{0}&{IR}_{1}&\\
-			\hline
-			&{RI}_{0}&{RI}_{1}&
-		\end{array}
-		\qquad\qquad
-		\sigma_1=\drow{1,0}\]
+		
+%		\[\sigma_0=\drow{0,1}
+%		\qquad\qquad
+%		\begin{array}{l|cc|r}
+%			&{I}_{0}&{I}_{1}&\\
+%			\hline
+%			{T}_{0}&0&1&{R}_{0}\\
+%			{T}_{1}&1&0&{R}_{1}\\
+%			\hline
+%			&{IR}_{0}&{IR}_{1}&\\
+%			\hline
+%			&{RI}_{0}&{RI}_{1}&
+%		\end{array}
+%		\qquad\qquad
+%		\sigma_1=\drow{1,0}\]
+\begin{center}
+					\includegraphics{Serialismo-matematicas-diagrama-13}
+\end{center}
