--- a/Entrega III/07.Espectros.tex
+++ b/Entrega III/07.Espectros.tex
@@ -427,7 +427,7 @@ $$\sum_{\sigma\in{S}_n}|{Stab}(\sigma)|=1\cdot(\#\sigma_1)+2\cdot(\#\sigma_2)+4\
 		
 		\subsubsection[Elementos estables mediante $S$]{Elementos estables mediante ${S}$}
 		
-		Los elementos estables mediante $S$ son aquellos que quedan invariantes mediante reflexiones. En este punto se ha de separar por paridad de $n$. 
+		Los elementos estables mediante $S$ son aquellos que quedan invariantes mediante reflexiones. De nuevo, en este punto se ha de separar por paridad de $n$. 
 		
 		Para $n$ impar, existen $n$ reflexiones para cada uno de los ejes de simetría que pasan por cada vértice. Después, hay $n$ formas de escoger el primer vértice de la secuencia. Ahora hay $\frac{n-1}{2}$ parejas de vértices; se escoge los primeros miembros entre ellos de $2^{\frac{n-1}{2}}$ formas, tras lo cual éstos se ordenan de $\frac{n-1}{2}!$ formas. Esto da un resultado de  $n^2\cdot2^{\frac{n-1}{2}}\cdot\frac{n-1}{2}!$ polígonos invariantes.
 		
