--- a/Entrega III/Serialismo-matematicas-III.tex
+++ b/Entrega III/Serialismo-matematicas-III.tex
@@ -72,7 +72,7 @@
 	
 	En el primer artículo~\cite{celia1} nos centramos en el dodecafonismo, en sus orígenes y en comentar una de sus obras. En el segundo artículo~\cite{celia2} ampliamos las definiciones dodecafónicas para encontrar el grupo diédrico, y descubrimos la historia de los discípulos de Schoenberg y del serialismo integral.
 	
-	Esta tercera entrega está destinada al lector más ducho en las matemáticas; se notará en el lenguaje y en la exposición de las ideas. En ella proporcionaremos herramientas matemáticas relacionadas con \textbf{acciones}, \textbf{órbitas} y \textbf{estabilizadores} de Teoría de Grupos (\hyperref[ch:acciones]{sección 2}), para después contar de dos maneras distintas el \textbf{número de espectros seriales}, que son el número de órbitas de las transformaciones sobre las series, que un compositor puede utilizar en sus obras (\hyperref[ch:espectros]{sección 3}); en concreto, con las transformaciones $\{I,\ T,\ R\}$ (\hyperref[s:itr]{3.1}) y $\{S,\ T,\ V,\ C\}$ (\hyperref[s:stvc]{3.2}). Y de esta manera habremos hecho un recorrido a fondo por el serialismo y habremos explorado sus posibilidades musicales y matemáticas.
+	Esta tercera entrega está destinada al lector más ducho en las matemáticas; se notará en el lenguaje y en la exposición de las ideas. En ella proporcionaremos herramientas matemáticas relacionadas con \textbf{acciones}, \textbf{órbitas} y \textbf{estabilizadores} de Teoría de Grupos (\hyperref[ch:acciones]{sección 2}), para después contar de dos maneras distintas el \textbf{número de espectros seriales}, que son el número de órbitas del grupo de transformaciones sobre las series, que un compositor puede utilizar en sus obras (\hyperref[ch:espectros]{sección 3}); en concreto, con las transformaciones $\{I,\ T,\ R\}$ (\hyperref[s:itr]{3.1}) y $\{S,\ T,\ V,\ C\}$ (\hyperref[s:stvc]{3.2}). Y de esta manera habremos hecho un recorrido a fondo por el serialismo y habremos explorado sus posibilidades musicales y matemáticas.
 	
 	\input{06.Acciones}%
 	\input{07.Espectros}%
