--- a/Entrega IV/08.Filosofia.tex
+++ b/Entrega IV/08.Filosofia.tex
@@ -1,43 +1,18 @@
-%\section{El serialismo en la filosofía del arte}\label{ch:filosofia}
-	 % TODO
-        % 08.Recorrido filosófico histórico, filosofía del arte (quotes), motivos míos (filosofía actual)
-%    \subsection{Recorrido filosófico del serialismo}
-%    Schoenberg thought 'classical' tonality (aka. common-practise) was a social construct, every law was arbitrary, and that people enjoyed that kind of music because the system had internal consistency. Therefore, he created a new system (12-tone) that in his opinion had the same logic. He believed that in 100 years lay people would be singing his tunes!!
-%    
-%    Some aspects of traditional tonality *are* arbitrary, e.g. Why are maj./min. chords consonant but 7ths and 9ths not? We could move the line and say that 7ths are consonant too but 9ths still not, etc. Also, we could use scales from 'foreign' musical traditions, like the acoustic scale, and so on.
-%    
-%    Studies show that some concepts are universal. E.g. unrelated cultures like Scotland and China have pentatonic melodies (c-d-e-g-a). That's not a coincidence, most scales around the world share certain properties. In no culture is the octave split in equal intervals (e.g.12), and are all the notes treated equally.
-%    
-%    Debussy, Ravel, and Stravinsky used uncommon scales, harmonies (no tonic/dominant chords...), and rhythms; but they're still popular because they followed some of the musical universals. Also, Indian Ragas, Arabic Maqam, and Blues melodies don't follow traditional tonality, but they can be easily grasped.
-%    
-%    Scriabin too used dissonance and ambiguity, but he isn't atonal in Schoenberg's sense. He mostly used the octatonic scale (used in Jazz, a 'popular' genre), and the acoustic scale (like the Simpsons theme!!). He uses 7 and 8-note scales, not all 12 tones. Also, his harmonies respect the harmonic series and follow a vague form of tonality, e.g. Vers la Flamme begins and ends with a chord built on E, and he 'modulates' by 3rds and tritones.
-%    
-%    Schoenberg and his acolytes were obsessed in making history by writing something radically new. However, I still like some of their stuff, but Berg's concerto isn't beautiful because it's serial, it's rather because he was so cunning that he could 'circumvent' the rules and write something meaningful. Nobody 'hears' a tone row. In some way, when someone says "Boulez's 2nd sonata is random notes", he's actually right, because we can't *hear* the patterns. They can only be *read* in the score. They're the emperor's clothes.
-%    
-%    
-%    Pensive, those are some great points. The systems of tonality vary around the world. However I disagree with you on Schoenberg's reason for developing the twelve tone system. I believe Schoenberg thought the twelve tone system was a natural developm
-%    
-%        
-%    Oh yeah, I was simplyfying a lot about Schoenberg. To be more exact, he (and Webern, Berg...) were first obsessed with the motif (ie. tiny melodic bit). Check out Berg's Piano Sonata: everything's based on the motifs of the very first bars. He thought that if the motif became the strutural 'glue' of a piece, then tonality was not necessary as a 'unifying' force. But that overthrow is controversial, and implies many personal circumstances... Later, he substituted the motif for the tone row as the main principle.
-%    
-%    In any case, Schoenberg's 12-tone technique was not the "natural" continuation of tonality, it was just one alternative. What makes Scriabin's or Stravinski's methods less valid? However, Schoenberg, unlike the others, wrote many many books ('selling' his ideas) that became the official textbooks of many American universities (see http://www.nytimes.com/2000/07/23/arts/l-serialist-history-textbook-dogma-297585.html)... And for a time, contradicting him became a sin (e.g. %http://www.nytimes.com/2000/07/09/arts/music-midcentury-serialists-the-bullies-or-the-besieged.html?pagewanted=all&src=pm).
-    
+
     \section{La visión artística de Schoenberg}
     En julio de 1921, tras haber ideado los fundamentos del dodecafonismo, Schoenberg anunció a su discípulo Josef Rufer \cite{quote1}:
     \begin{quote}
     	\textit{He realizado un descubrimiento que asegurará la supremacía de la música alemana durante los próximos cien años.}
     \end{quote}
 
-    Durante la mayor parte de su vida, Schoenberg creyó que el público general acabaría aceptando la música dodecafónica del mismo modo que se habían aceptado los sistemas tonales durante siglos. %No solo eso, sino que pensaba que trascurridos esos cien años se cantarían canciones dodecafónicas por todo el mundo.% El dodecafonismo sería la música del mañana.
-    %
-    Para él, la naturalidad del sistema dodecafónico residía en que era un paso más en el proceso musical histórico: desde el contrapunto y el desarrollo motívico, practicado por los grandes maestros de la tradición alemana, hasta la disolución de la tonalidad, anticipada por la música postwagneriana e impresionista. Era parte de un continuo, del desarrollo de la historia de la música. En palabras de Schoenberg \cite{scho}:
+    Durante la mayor parte de su vida, Schoenberg creyó que el público general acabaría aceptando la música dodecafónica del mismo modo que se habían aceptado los sistemas tonales desde hacía siglos. Para él, la naturalidad del sistema dodecafónico residía en que era un paso más en el proceso musical histórico: desde el contrapunto y el desarrollo motívico, practicado por los grandes maestros de la tradición alemana, hasta la disolución de la tonalidad, anticipada por la música postwagneriana e impresionista. Era parte de un continuo, del desarrollo de la historia de la música. En palabras de Schoenberg \cite{scho}:
     \begin{quote}
     	\textit{Yo creo que la composición con doce sonidos y la que muchos llaman erróneamente ``música atonal'', no es el final de un viejo período, sino el comienzo de otro nuevo. Una vez más, como hace dos siglos, hay algo a lo que se llama anticuado; y una vez más, no se trata de ninguna obra en particular, [...] % ni de varias obras de determinado compositor; de nuevo, no es la mayor o menor maestría de tal compositor, 
     	sino que otra vez sucede que es un estilo el condenado al ostracismo. %Vuelve a darse a sí misma la denominación de Música Nueva [...]
     }
     \end{quote}
 
-	Tras la muerte de Schoenberg en 1951, y durante algunas décadas más, su sistema compositivo fue venerado por los compositores jóvenes más brillantes (ver \cite{celia2}), pero pronto se desvaneció de las salas de conciertos. El serialismo siempre se consideró una música académica, difícil de entender, apenas musical sino teórica. La complejidad de percibir esta música meramente por su estructura formal impidió, y todavía impide, que se disfrutara más allá de su estudio. Schoenberg intentó eximirse culpando al oyente, quien él creyó que no se esforzaba lo suficiente \cite{scho}:
+	Tras la muerte de Schoenberg en 1951, y durante algunas décadas más, su sistema compositivo fue venerado por los compositores jóvenes más brillantes (véase \cite{celia2}), pero pronto se desvaneció de las salas de conciertos. El serialismo siempre se consideró una música académica, difícil de entender, apenas musical sino teórica. La complejidad de percibir esta música meramente por su estructura formal impidió, y todavía impide, que se disfrutara más allá de su estudio. Schoenberg intentó eximirse culpando al oyente, quien él creyó que no se esforzaba lo suficiente \cite{scho}:
 	
 	\begin{quote}
 		\textit{La composición con doce sonidos no tiene otra finalidad que la comprensión.
@@ -59,13 +34,10 @@
 	\begin{quote}
 		\emph{Ningún artista, ningún poeta, ningún filósofo y ningún músico, cuyo pensamiento se desenvuelve en la más alta esfera, habrá de descender a la vulgaridad para mostrarse complacientes con un eslogan tal como ``Arte para todos''. Porque si es arte no será para todos, y si es para todos no será arte.}%\footnote{A. Schoenberg, \emph{New Music, Outmoded Music, Style and Idea}, 1946.}
 	\end{quote}
-
-%	\subsection{Serialismo de escalas no cromáticas}
-%	Tras cien años de cambios históricos transcendentales como el desarrollo de la tecnología y la globalización, la definición de arte es muy diferente a la que Schoenberg expresaba en su tiempo. El arte está cada vez más cerca del ciudadano de a pie, y se le intenta explicar y simplificar por todos los medios el arte que no entiende.
 	
-	Sin embargo, el rechazo a no ser rechazado ha dejado de tener cabida en nuestro contexto artístico. El academicismo ya no es excluyente a la divulgación o a la búsqueda de belleza sensorial. De las técnicas serialistas se puede tomar aquello que es interesante intelectualmente e incorporarlo a otras técnicas que son interesantes estéticamente.
+	Sin embargo, el rechazo a no ser rechazado ha dejado de tener cabida en nuestro contexto artístico. El academicismo ya no es excluyente a la divulgación o a la búsqueda de belleza sensorial. De las técnicas serialistas se puede tomar aquello que es interesante intelectualmente e incorporarlo a otras técnicas.
 	
-	Este es el experimento que he querido proponer: despojar al serialismo de lo que, en mi opinión, provoca el rechazo general: la disonancia extrema. Ya que esta proviene del cromatismo, el propósito del experimento es utilizar escalas que tengan menos intervalos de semitono para crear con ellas un pseudo-serialismo de menos notas. 
+	Este es el experimento que he querido proponer: despojar al serialismo de uno de los elementos que provoca más rechazo: la disonancia extrema. Ya que esta proviene del cromatismo, el propósito del experimento es utilizar escalas que tengan menos intervalos de semitono para crear con ellas un \textit{pseudo-serialismo} de menos notas. 
 	
 	Se han modificado las notas de varias obras dodecafónicas ya existentes, mientras que el ritmo, la duración, el timbre y las dinámicas, que siguen siendo producto de los compositores originales, se han dejado intactas. El propósito final es intentar conservar la estructura matemática subyacente renovando, en cambio, la percepción colectiva de estas músicas.
 	
