--- a/Entrega IV/10.Modificaciones.tex
+++ b/Entrega IV/10.Modificaciones.tex
@@ -52,14 +52,6 @@ Son la escala pentatónica, la escala de tonos enteros, la escala heptafónica de 
 		\ddiagram{0,4,5,2,7,9,6,8,11,10,3,1}
 \end{center}
 	
-%	La tercera, \textit{Der Wein}, es un aria de concierto para soprano y orquesta compuesta por Berg en 1929. La letra es una traducción al alemán de los tres poemas de Charles Baudelaire ``\textit{Le Vin}''. Son una celebración del vino y de la felicidad de quienes lo toman.
-%	
-%	La pieza evoca aires tonales, ya que su serie está compuesta por la escala de Re menor y la de Sol bemol Mayor. Es una pieza simétrica que evoca también la forma sonata, con los tres poemas formando una exposición, un desarrollo y una recapitulación.
-%	
-%	{Su serie original\footnote{\href{http://www.ccarh.org/publications/data/humdrum/tonerow/files/berg/berg09.pc.krn}{ \texttt{\textasciitilde/berg/berg09.pc.krn} }} es:        	
-%		\drow{2,4,5,7,9,10,1,6,8,0,11,3}}
-%	\ddiagram{2,4,5,7,9,10,1,6,8,0,11,3}
-	
 	La tercera, de 1936, es la única obra publicada de Anton Webern para piano solo: \textit{Variationen für Klavier}, Op. 27, y se compone de tres movimientos: \textit{Sehr mässig}, \textit{Sehr schnell} y \textit{Ruhig fliessend}.
 	
 	Su \href{http://www.ccarh.org/publications/data/humdrum/tonerow/files/webern/webern17.pc.krn}{serie principal} es:
@@ -67,20 +59,6 @@ Son la escala pentatónica, la escala de tonos enteros, la escala heptafónica de 
 \begin{center}
 		\ddiagram{3,11,10,2,1,0,6,4,7,5,9,8}
 \end{center}
-	
-%	Por último, \textit{3 Lieder}, Op. 18, compuesta por Webern en 1925, es un tríptico de Lieder para voz, clarinete y guitarra. Los Lieder, junto con sus respectivas series, son:
-%	
-%	\textit{Schatzerl Klein}\footnote{\href{http://www.ccarh.org/publications/data/humdrum/tonerow/files/webern/webern06.pc.krn}{ \texttt{\textasciitilde/webern/webern06.pc.krn} }}: \hfill
-%	\drow{0,11,5,8,10,9,3,4,1,7,2,6}
-%	\ddiagram{0,11,5,8,10,9,3,4,1,7,2,6}
-%	
-%	\textit{Erlosung}\footnote{\href{http://www.ccarh.org/publications/data/humdrum/tonerow/files/webern/webern07.pc.krn}{ \texttt{\textasciitilde/webern/webern07.pc.krn} }}: \hfill
-%	\drow{6,9,5,8,4,7,3,11,2,10,1,0}
-%	\ddiagram{6,9,5,8,4,7,3,11,2,10,1,0}
-%	
-%	\textit{Ave, Regina Coelorum}\footnote{\href{http://www.ccarh.org/publications/data/humdrum/tonerow/files/webern/webern08.pc.krn}{ \texttt{\textasciitilde/webern/webern08.pc.krn} }}: \hfill
-%	\drow{4,3,7,6,5,11,10,2,1,0,9,8}
-%	\ddiagram{4,3,7,6,5,11,10,2,1,0,9,8}
     
     \subsection{Programa \textit{online} de modificación de partituras}
 	He creado una página web \textit{online} que transforma cada nota de una partitura a cualquier nota requerida, una a una. Este \textit{software} sirve para no tener que modificar a mano las partituras del experimento, pero también puede servir para otros propósitos. Por ejemplo, para cambiar una partitura de mayor a menor, o viceversa.
@@ -91,33 +69,33 @@ Son la escala pentatónica, la escala de tonos enteros, la escala heptafónica de 
 	
    	 La aplicación web se encuentra en el siguiente enlace: \url{https://modificaciones.netlify.com/}. Sus instrucciones de uso se encuentran al final de la página web.
     
-    \subsection{Conclusiones}
+    \section{Conclusiones}
     Todas las conclusiones que se pueden extraer de este experimento son enteramente subjetivas. El objetivo de realizarlo es poder seguir investigando con las propiedades matemáticas de la música, y analizar el impacto emocional que éstas pueden causar.
     
     No se puede afirmar que la transformación mejore o empeore ninguna obra. En todo caso podemos interpretar qué transformaciones tienen un determinado sentido musical o estético, dependiendo de la escala utilizada o del estilo con el que estén compuestas.     
     Tampoco debemos olvidar que el cromatismo siempre aportará a las obras una dimensión añadida, un elemento extra que ha impulsado gran parte de la innovación en la historia de la música. Quitarlo por completo es, en realidad, retroceder en la evolución del arte.
    	
-   	En general, las transformaciones hexatónica y octotónica siguen conservando mucho del cromatismo que tiene la partitura original. Siguen sonando ajenas al oído tonal del oyente medio. Vamos a comentar algunas de las impresiones que generan las otras dos transformaciones en cada una de las obras.
+   	En general, las transformaciones hexatónica y octotónica siguen conservando mucho del cromatismo que tiene la partitura original. Siguen sonando ajenas al oído tonal del oyente medio. Vamos a comentar algunas de las impresiones que generan las otras dos transformaciones en cada una de las obras, aunque dejaremos al lector que forme su propia opinión.
    	
-    \subsubsection{Obra de Berg: Lied der Lulu}
-	El estilo compositivo de Berg busca, en su mayor parte, acercarse a las formas tonales; maneja la falta de tonalidad serialista sin deshacerse de muchos elementos de la tradición musical. Sus melodías son fluidas y su fraseo inicia a conversar. Así, la transformación pentatónica (5) queda demasiado simplista y repetitiva, y es en cambio la heptatónica (7) la que nos traslada a sonoridades más familiares.
+    \subsection{Obra de Berg: Lied der Lulu}
+	El estilo compositivo de Berg busca, en su mayor parte, acercarse a las formas tonales; maneja la falta de tonalidad serialista sin deshacerse de muchos elementos de la tradición musical. Sus melodías son fluidas y su fraseo inicia a conversar. Así, la transformación pentatónica (5) queda, quizás, algo simplista y repetitiva, y es en cambio la heptatónica (7) la que nos traslada a sonoridades más familiares.
 	
     \url{https://soundcloud.com/celiarubio/sets/berg-lied-der-lulu}
     
-    \subsubsection{Obra de Webern: Variationen op. 27}
+    \subsection{Obra de Webern: Variationen op. 27}
     El estilo compositivo de Webern es rompedor y enigmático. Tanto fue así que su música sirvió de inspiración para el serialismo integral de los años 50. Sus melodías suenan fragmentadas y están llenas de intervalos de más de una octava. Es, por tanto, muy difícil que cualquier transformación que conserve similitudes melódicas con la partitura original pueda acercarse a músicas más convencionales. La esencia de esta obra está precisamente en su peculiaridad.
     
     \url{https://soundcloud.com/celiarubio/sets/webern-op27-variations}
     
     
-    \subsubsection{Obra de Schoenberg: Suite op. 25}
+    \subsection{Obra de Schoenberg: Suite op. 25}
     El estilo compositivo de Schoenberg en la Suite es tradicional, aunque busca nuevas sonoridades. Su principal objetivo es conservar la estructura formal anterior, y por ello lo único que aleja a la obra es el uso del serialismo en la altura de las notas.
     
-    La obra es, en general, más armónica que melódica, ya que pretende simular texturas instrumentales del periodo barroco. Además, que se centre tanto en la formalidad de la pieza aporta una riqueza separada del uso del serialismo. Por ello, la transformación pentatónica (5) no acaba siendo monótona, sino sugestiva.
+    La obra es, en general, más armónica que melódica, ya que pretende simular texturas instrumentales del periodo barroco. Además, al centrarse tanto en la formalidad de la pieza aporta una riqueza separada del uso del serialismo. Por ello, la transformación pentatónica (5) no acaba siendo monótona sino muy sugestiva.
     
-    Por otro lado, la elección concreta de la función transformativa, que hace predominar las notas do y sol \textemdash que aparecen en la serie una vez más que el resto\textemdash~provoca que, en muchos casos, la obra simule estar en do mayor. Como en la partitura original predomina el intervalo de tritono re $\flat$ \textendash~sol, la transformación da peso al intervalo de quinta justa, que es la base de la armonía tradicional.
+    Por otro lado, la elección concreta de la función transformativa, que hace predominar las notas do y sol \textemdash que aparecen en la nueva serie una vez más que el resto de notas\textemdash~provoca que, en muchos casos, la obra simule estar en do mayor. Como en la partitura original predomina el intervalo de tritono re $\flat$ \textendash~sol, la transformación da peso al intervalo de quinta justa, que es la base de la armonía tradicional.
     
-    La transformación heptatónica todavía deja alguna disonancia intensa, debido a la existencia de semitonos entre las notas mi \textendash~fa y si \textendash~ do, y al tritono en fa \textendash~si.
+    La transformación heptatónica sigue dejando alguna disonancia debido a la existencia de semitonos entre las notas mi \textendash~fa y si \textendash~ do, y al tritono en fa \textendash~si. Al ser una obra ampliamente textural, muchos de estos intervalos aparecen con frecuencia.
     
     \url{https://soundcloud.com/celiarubio/sets/schoenberg-op25-1-prelude}
     
